revert pelican to include about page, remove GA

--- a/caseo_exploration.html
+++ b/caseo_exploration.html
@@ -62,6 +62,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -133,9 +136,9 @@ wheel. Individual, miniature, hermetically sealed cheese wheels. So you ought to
 Babybel cheese the way you do a cheddar or a gouda. Day after day, month after month, I looked
 at those Babybel cheeses and wondered what an 18-month Babybel cheese would look and taste like.
 Finally, I decided there was only one way to find&nbsp;out.</p>
-<hr>
-<p><a href="https://blog.justalfred.com/images/cheese_experiment.jpg"><img alt="" src="https://blog.justalfred.com/images/cheese_experiment.jpg"></a></p>
-<hr>
+<hr />
+<p><a href="https://blog.justalfred.com/images/cheese_experiment.jpg"><img alt="" src="https://blog.justalfred.com/images/cheese_experiment.jpg" /></a></p>
+<hr />
 <p>Last week marked the 18-month anniversary of the oldest in my collection. I didn&#8217;t collect
 the cheeses with rigorous regularity, but I was satisfied in the end having a somewhat even
 spectrum of ages. It was time to examine. Opening the freshest of the four samples presented
@@ -204,13 +207,13 @@ don&#8217;t want to eat. Pros and&nbsp;cons.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -259,23 +262,6 @@ don&#8217;t want to eat. Pros and&nbsp;cons.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
