--- a/nobels.html
+++ b/nobels.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Science,Humans" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Nobels"/>
         <meta property="og:url" content="https://blog.justalfred.com/nobels.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie ..."/>
         <meta property="article:published_time" content="2013-09-08" />
             <meta property="article:section" content="science" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -39,8 +39,8 @@
 <p>You know what&#8217;s cooler than winning a Nobel Prize? Winning two Nobel
 Prizes. How many people have done this since the first award in 1901?
 Four. Would you believe that the first was a&nbsp;woman?  </p>
-<p><a name="more"></a><br>
-Madame Marie Skłodowska-Curie …</p>"/>
+<p><a name="more"></a><br />
+Madame Marie Skłodowska-Curie ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -71,6 +71,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -138,7 +141,7 @@ Just Alfred            </a>
 <p>You know what&#8217;s cooler than winning a Nobel Prize? Winning two Nobel
 Prizes. How many people have done this since the first award in 1901?
 Four. Would you believe that the first was a&nbsp;woman?  </p>
-<p><a name="more"></a><br>
+<p><a name="more"></a><br />
 Madame Marie Skłodowska-Curie. Born in Poland, died in France. A
 pioneering woman in science, her list of achievements is humbling to
 even the greatest of geniuses. Her first Nobel was the Physics Prize,
@@ -199,13 +202,13 @@ their intellectual equals, then everyone pays a&nbsp;cost.  </p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -254,23 +257,6 @@ their intellectual equals, then everyone pays a&nbsp;cost.  </p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
