--- a/the-acceptance-of-ambiguity.html
+++ b/the-acceptance-of-ambiguity.html
@@ -65,6 +65,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -127,7 +130,7 @@ Just Alfred            </a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <div style="text-align:center">
-<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/240px-Yin_yang.svg.png"></p>
+<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/240px-Yin_yang.svg.png" /></p>
 </div>
 <p><a href="https://blog.justalfred.com/literary-theory.html">A little while back</a>, I tried to illustrate the value of accepting ambiguity via Emily Dickinson and Jacob Bronowski.
 Poetry and Science.
@@ -281,13 +284,13 @@ But what is that point? See Popper and the paradox of&nbsp;tolerance.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -336,23 +339,6 @@ But what is that point? See Popper and the paradox of&nbsp;tolerance.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
