--- a/the-peoples-house.html
+++ b/the-peoples-house.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="The People’s House"/>
         <meta property="og:url" content="https://blog.justalfred.com/the-peoples-house.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in ..."/>
         <meta property="article:published_time" content="2011-10-19" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>Considering that one&#8217;s social graph is not uniformly distributed among
 the general population, but rather concentrated around a small number of
 highly-connected nodes, I think it is fairly safe to say that 100% of my
-readers fall in …</p>"/>
+readers fall in ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -69,6 +69,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -145,8 +148,8 @@ and out of touch to those blaming Hollywood for the false stereotypes. 
 Many people pointed to their personally penurious positions and
 penchants for opera as evidence against the stereotype.  I&#8217;ll take the
 argument a step further.  You will find few institutions more
-egalitarian than the opera house.<br>
-<a name="more"></a><br>
+egalitarian than the opera house.<br />
+<a name="more"></a><br />
 Granted, at the major halls, there are seats that sell for several
 hundred dollars each, and season subscriptions run easily into the
 thousands.  I recall seeing back in 2010 that by donating about
@@ -245,13 +248,13 @@ life feels&nbsp;fair.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -300,23 +303,6 @@ life feels&nbsp;fair.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
