--- a/a-little-night-food-music.html
+++ b/a-little-night-food-music.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="A Little Night-Food Music"/>
         <meta property="og:url" content="https://blog.justalfred.com/a-little-night-food-music.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and ..."/>
         <meta property="article:published_time" content="2013-03-12" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>For the unaware, the title is a reference to Mozart&#8217;s <a href="http://en.wikipedia.org/wiki/Eine_kleine_Nachtmusik">Eine Kleine
 Nachtmusik</a>.
 Everyone knows the tune. Also for the unaware, &#8220;night-food&#8221; refers to
-the food you eat at dinner. So you see, the title is clever and …</p>"/>
+the food you eat at dinner. So you see, the title is clever and ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -69,6 +69,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -135,7 +138,7 @@ Just Alfred            </a>
 Nachtmusik</a>.
 Everyone knows the tune. Also for the unaware, &#8220;night-food&#8221; refers to
 the food you eat at dinner. So you see, the title is clever and not at
-all contrived because this post is about music to go along with dinner.<br>
+all contrived because this post is about music to go along with dinner.<br />
 <a name="more"></a>  </p>
 <p>I recently hosted a dinner party and made some Korean food for the
 occasion. The menu included ddukbokki as an appetizer which I dubbed,
@@ -203,13 +206,13 @@ maybe Swan Lake if anyone ate&nbsp;swan.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -258,23 +261,6 @@ maybe Swan Lake if anyone ate&nbsp;swan.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
