--- a/austin-auto.html
+++ b/austin-auto.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Austin-auto"/>
         <meta property="og:url" content="https://blog.justalfred.com/austin-auto.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify ..."/>
         <meta property="article:published_time" content="2010-12-13" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>A kind friend forgave my ignorance of popular and indie music since I
 know a fair deal about classical music. This, she deemed, was an
 elevated sort of knowledge. The compliment was appreciated, but I can&#8217;t
-logically justify …</p>"/>
+logically justify ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -69,6 +69,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -239,13 +242,13 @@ the&nbsp;experience.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -294,23 +297,6 @@ the&nbsp;experience.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
