--- a/discoveries-i.html
+++ b/discoveries-i.html
@@ -64,6 +64,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -222,13 +225,13 @@ I have to reserve it for another&nbsp;day.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -277,23 +280,6 @@ I have to reserve it for another&nbsp;day.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
