--- a/hypotheses-part-1.html
+++ b/hypotheses-part-1.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Science" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Hypotheses Part 1"/>
         <meta property="og:url" content="https://blog.justalfred.com/hypotheses-part-1.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas ..."/>
         <meta property="article:published_time" content="2013-07-27" />
             <meta property="article:section" content="science" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>I&#8217;m going to try again to focus on short-form publishing here. I&#8217;m
 starting yet another series of posts called &#8220;Hypotheses&#8221;. I am well
 known as having random ideas float through my head. Some of these are
-ideas …</p>"/>
+ideas ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -69,6 +69,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -135,7 +138,7 @@ Just Alfred            </a>
 starting yet another series of posts called &#8220;Hypotheses&#8221;. I am well
 known as having random ideas float through my head. Some of these are
 ideas about how some part of existence works. I&#8217;ll share some with you
-in this series.<br>
+in this series.<br />
 <a name="more"></a>Have you ever marveled at dogs&#8217; olfactory acumen?
 Give a bloodhound a sock, and he&#8217;ll find a lost person. Or so the movies
 say. Have you also ever marveled at how smelly we can get by the end of
@@ -200,13 +203,13 @@ please do shower if you decide to report to me in&nbsp;person.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -255,23 +258,6 @@ please do shower if you decide to report to me in&nbsp;person.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
