--- a/hypotheses-part-2.html
+++ b/hypotheses-part-2.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Science" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Hypotheses Part 2"/>
         <meta property="og:url" content="https://blog.justalfred.com/hypotheses-part-2.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my ..."/>
         <meta property="article:published_time" content="2013-08-21" />
             <meta property="article:section" content="science" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>Fancy bars these days like to serve their cocktails with a single big
 chunk of ice. Less surface area means slower cooling means less dilution
 of your expensive elixir over time. I don&#8217;t buy&nbsp;it.  </p>
-<p><a name="more"></a>Here&#8217;s my …</p>"/>
+<p><a name="more"></a>Here&#8217;s my ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -69,6 +69,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -229,13 +232,13 @@ of my analysis, please let me&nbsp;know!</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -284,23 +287,6 @@ of my analysis, please let me&nbsp;know!</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
