--- a/pages/about-the-site.html
+++ b/pages/about-the-site.html
@@ -13,13 +13,13 @@
 <link rel="canonical" href="https://blog.justalfred.com/pages/about-the-site.html">
 
         <meta name="author" content="Just Alfred" />
-        <meta name="description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. Doctorate was in Experimental Condensed Matter Physics. Lately, I’ve been thinking about how to be human. I’m using this as a place to share …" />
+        <meta name="description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. Doctorate was in Experimental Condensed Matter Physics. Lately, I’ve been thinking about how to be human. I’m using this as a place to share ..." />
 
     <meta property="og:site_name" content="Just Alfred" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="About the Site"/>
     <meta property="og:url" content="https://blog.justalfred.com/pages/about-the-site.html"/>
-    <meta property="og:description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. Doctorate was in Experimental Condensed Matter Physics. Lately, I’ve been thinking about how to be human. I’m using this as a place to share …" />
+    <meta property="og:description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. Doctorate was in Experimental Condensed Matter Physics. Lately, I’ve been thinking about how to be human. I’m using this as a place to share ..." />
 
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
@@ -55,6 +55,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li class="active"><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -139,13 +142,13 @@ Take the name of this blog with no spaces, add a &#8216;.blog&#8217; to that, an
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -194,23 +197,6 @@ Take the name of this blog with no spaces, add a &#8216;.blog&#8217; to that, an
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
