--- a/present.html
+++ b/present.html
@@ -64,6 +64,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -139,7 +142,7 @@ I see a faint, clouded reflection of myself. I feel like I&#8217;m here, but I&#
 Approaching <em>muga</em>. I start to detach. I want others to see this and experience&nbsp;it.</p>
 <p>And with these thoughts in mind, I made my own&nbsp;art.</p>
 <p>Self Portrait: Relinquishing My&nbsp;Self</p>
-<p><a href="https://blog.justalfred.com/images/self-portrait1.jpg"><img alt="" src="https://blog.justalfred.com/images/self-portrait1.jpg"></a></p>
+<p><a href="https://blog.justalfred.com/images/self-portrait1.jpg"><img alt="" src="https://blog.justalfred.com/images/self-portrait1.jpg" /></a></p>
             </div>
             <!-- /.entry-content -->
         </article>
@@ -178,13 +181,13 @@ Approaching <em>muga</em>. I start to detach. I want others to see this and expe
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -233,23 +236,6 @@ Approaching <em>muga</em>. I start to detach. I want others to see this and expe
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
