--- a/quicklink-1.html
+++ b/quicklink-1.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Quicklink 1"/>
         <meta property="og:url" content="https://blog.justalfred.com/quicklink-1.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on ..."/>
         <meta property="article:published_time" content="2010-12-15" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -40,7 +40,7 @@
 <p>Or for the YouTube channel directly:
 <a href="http://www.youtube.com/user/howtolistentomusic">http://www.youtube.com/user/howtolistentomusic</a>  </p>
 <p>This music critic goes through popular songs and rates each section
-(identified in the upper right) on …</p>"/>
+(identified in the upper right) on ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -71,6 +71,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -183,13 +186,13 @@ formula emerge from the more banal songwriters.&nbsp;Enjoy.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -238,23 +241,6 @@ formula emerge from the more banal songwriters.&nbsp;Enjoy.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
