--- a/renaissance.html
+++ b/renaissance.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music,info" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Renaissance"/>
         <meta property="og:url" content="https://blog.justalfred.com/renaissance.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I ..."/>
         <meta property="article:published_time" content="2013-02-11" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -39,7 +39,7 @@
 <p>I don&#8217;t think I have to remind my readers what <em>renaissance</em> means, but
 that is what is going on&nbsp;here.  </p>
 <p><a name="more"></a>It has been well over a year since my last post, and
-much has changed. For one, I …</p>"/>
+much has changed. For one, I ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -70,6 +70,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -218,13 +221,13 @@ it when I find the&nbsp;time.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -273,23 +276,6 @@ it when I find the&nbsp;time.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
