--- a/satb.html
+++ b/satb.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish …" />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish ..." />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="SATB"/>
         <meta property="og:url" content="https://blog.justalfred.com/satb.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish …"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish ..."/>
         <meta property="article:published_time" content="2010-12-19" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>That stands for <em>soprano</em>, <em>alto</em>, <em>tenor</em>, <em>bass</em>. That&#8217;s just a
 scoring for choral works common enough to get an abbreviation. You may
 have noticed if there are choirs in your church that there are the high
-and lowish …</p>"/>
+and lowish ...</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -69,6 +69,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
@@ -141,8 +144,8 @@ Doesn&#8217;t <em>treble</em> mean something? The three tenors don&#8217;t sound
 I never heard them singing <em>falsetto</em>. (That&#8217;s the higher register of
 your voice associated with yodeling which, by the way, is really hard
 whether you enjoy it or not.  Try it.) If you&#8217;ve wondered these things,
-too, then read on.<br>
-<a name="more"></a><br>
+too, then read on.<br />
+<a name="more"></a><br />
 When I took my music history class (instead of something useful, like
 the physics of oxides) we were taught that female voices are classified
 as <a href="http://www.youtube.com/watch?v=FMPv8mADpA4">soprano</a>,
@@ -259,13 +262,13 @@ to keep track of it&nbsp;all.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/code.html">
-                            code
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
@@ -314,23 +317,6 @@ to keep track of it&nbsp;all.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-58159452-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-    <!-- End Google Analytics Code -->
 
 </body>
 </html>
