update about page

--- a/pages/about-the-site.html
+++ b/pages/about-the-site.html
@@ -13,13 +13,13 @@
 <link rel="canonical" href="https://blog.justalfred.com/pages/about-the-site.html">
 
         <meta name="author" content="Just Alfred" />
-        <meta name="description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. Doctorate was in Experimental Condensed Matter Physics. Lately, I’ve been thinking about how to be human. I’m using this as a place to share ..." />
+        <meta name="description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. My doctorate was in Experimental Condensed Matter Physics, but lately, I’ve been thinking more about how to be human. This has taken me on a ..." />
 
     <meta property="og:site_name" content="Just Alfred" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="About the Site"/>
     <meta property="og:url" content="https://blog.justalfred.com/pages/about-the-site.html"/>
-    <meta property="og:description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. Doctorate was in Experimental Condensed Matter Physics. Lately, I’ve been thinking about how to be human. I’m using this as a place to share ..." />
+    <meta property="og:description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. My doctorate was in Experimental Condensed Matter Physics, but lately, I’ve been thinking more about how to be human. This has taken me on a ..." />
 
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
@@ -99,13 +99,14 @@ I&#8217;m a former physicist and data scientist.
 Recently, I worked at <a href="https://www.whiteops.com">White Ops</a>,
 <a href="https://www.paperlesspost.com/">Paperless Post</a>,
 and <a href="https://bitly.com/">Bitly</a>.
-Doctorate was in Experimental Condensed Matter Physics.
-Lately, I&#8217;ve been thinking about how to be&nbsp;human.</p>
+My doctorate was in Experimental Condensed Matter Physics, but lately, I&#8217;ve been thinking more about how to be human.
+This has taken me on a jaunt through the humanities.
+I have so much more to&nbsp;explore.</p>
 <p>I&#8217;m using this as a place to share some thoughts, put ideas to the test, and possibly educate.
-I want more people to share their experiences with the world.
-I should lead by example.
-If you&#8217;d like to respond to anything I write, email me.
-Take the name of this blog with no spaces, add a &#8216;.blog&#8217; to that, and that&#8217;s the gmail account I&nbsp;created.</p>
+I want more people to share their experiences with the world through media like blogs.
+This is my lead by example.
+If you&#8217;d like to respond to anything I write, email me at:
+<a href="mailto:justalfred.blog@gmail.com">justalfred.blog@gmail.com</a>.</p>
 <p>Welcome, and I hope you&nbsp;enjoy.</p>
         </div>
     </section>
@@ -132,18 +133,13 @@ Take the name of this blog with no spaces, add a &#8216;.blog&#8217; to that, an
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
-                        </a>
-                    </li>
-                    <li class="list-group-item tag-1">
                         <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
                             The Classical-Kwontum Interface
                         </a>
                     </li>
-                    <li class="list-group-item tag-2">
-                        <a href="https://blog.justalfred.com/tag/science.html">
-                            science
+                    <li class="list-group-item tag-1">
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
@@ -151,14 +147,19 @@ Take the name of this blog with no spaces, add a &#8216;.blog&#8217; to that, an
                             code
                         </a>
                     </li>
-                    <li class="list-group-item tag-3">
-                        <a href="https://blog.justalfred.com/tag/info.html">
-                            info
+                    <li class="list-group-item tag-2">
+                        <a href="https://blog.justalfred.com/tag/science.html">
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
                         <a href="https://blog.justalfred.com/tag/literature.html">
                             literature
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-3">
+                        <a href="https://blog.justalfred.com/tag/info.html">
+                            info
                         </a>
                     </li>
                 </ul>
